# jarvis-clone

./: .gitignore  README.md  config.py  main.py  pyproject.toml
core/: agent.py  emotion.py  memory.py  router.py
prompts/: nova_system.txt
tools/: browser.py  camera.py  system.py  vision.py  writer.py
utils/: logger.py
voice/: listener.py  speaker.py
